[project]
name = "tg-bots"
version = "0.1.0"
description = ""
authors = [
    {name = "Lushnikov Ivan",email = "ladrek13@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram (>=3.22.0,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
